# OpenCV_Codes

./: .travis.yml  CMakeLists.txt  FindOpenCV.cmake  README.md  bgfg.cpp
